test(mqtt): use Stream.toList() in MqttTransportHandlerTest
All four call sites only iterate the result, so the immutable list from
toList() is sufficient and the Collectors import is no longer needed.